--- a/package.json
+++ b/package.json
@@ -1,18 +1,22 @@
 {
   "name": "dubai-family-extravaganza-2026",
+  "homepage": "https://shahsagar0.github.io/Dubai_Trip",
   "private": true,
   "version": "0.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist"
   },
   "dependencies": {
-    "react": "^19.2.0",
+    "gh-pages": "^6.3.0",
     "lucide-react": "^0.555.0",
-    "recharts": "^3.5.1",
-    "react-dom": "^19.2.0"
+    "react": "^19.2.0",
+    "react-dom": "^19.2.0",
+    "recharts": "^3.5.1"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
